# pmdsky-debug-net

./: .editorconfig  .gitignore  .gitmodules  Directory.Build.props  Gale.EOS.Debug.sln  Makefile  README.md  taskfile.yml
Gale.EOS.Debug/: Gale.EOS.Debug.csproj  PmdSkyData.cs  PmdSkyFunction.cs  PmdSkySymbol.cs  PmdSkySymbolMap.cs
Gale.EOS.Debug.Test/: Gale.EOS.Debug.Test.csproj  UnitTest1.cs
Gale.EOS.Kaitai/: Gale.EOS.Kaitai.csproj
Gale.EOS.Kaitai/EU/: AbilityId8.cs  Action16.cs  ActionData.cs  ActionDataActionParametersArray.cs  ActionParameter.cs  AdventureLogEncountersMonsterIdsArray.cs  AiCanAttackInDirectionArray.cs  AiObjective8.cs  AiPotentialAttackTargetDirectionsArray.cs  AiPotentialAttackTargetWeightsArray.cs  AiPotentialAttackTargetsArray.cs  AiRegularAttackWeightsArray.cs  AiThrownItemDirectionIsUsedArray.cs  AiThrownItemDirectionsArray.cs  AiThrownItemProbabilitiesArray.cs  AnimationControl.cs  AnimationControlField90x10Array.cs  AnimationData.cs  AnimationSpeed2.cs  ApplesAndBerriesItemIdsArray.cs  AppraisalMainMenuItemsArray.cs  AppraisalMenuItemsConfirmArray.cs  AppraisalSubmenuItemsArray.cs  Arm7.cs  Arm7Functions.cs  Arm9.cs  Arm9Data.cs  Arm9Functions.cs  AssemblyMainMenuItems1Array.cs  AssemblyMainMenuItems2Array.cs  AssemblyMenuItemsConfirmArray.cs  AudioCommand.cs  (+754 more)
gale_kaitai/: data_parser.py  function_parser.py  gen_kaitai.py  header_type_mapping.py  sky_north_america.ksy  util.py
generator/: gen_kaitai.py  pyproject.toml
generator/parsing/: data_parser.py  function_parser.py  util.py
generator/parsing/headers/: header_mapping.py
(+2969 files in other folders)
